--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -15,6 +15,7 @@
         </li>
           <% end %>
       </ul>
+      <h3>Steps</h3>
       <ul>
         <li>
           <% @recipe.preparations.each do |preparation| %>
@@ -22,11 +23,11 @@
           <% end %>
         </li>
       </ul>
-    </div>
-  </div>
-</div>
  <%= link_to 'edit', edit_recipe_path(@recipe), class: "btn btn-primary" %>
- <%= link_to 'delete', recipe_path(@recipe), class: "btn btn-primary",
+ <%= link_to 'delete', recipe_path, class: "btn btn-primary",
  method: :delete,
       data: { confirm: "Are you sure?" } %>
   <%= link_to 'back', recipes_path %>
+    </div>
+  </div>
+</div>
