--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,4 +1,7 @@
- <div class="container">
-  <%= render 'form', recipe: @recipe %>
-  <%= link_to 'cancel', recipe_path %>
- </div>
+<div class="container">
+  <div class="row">
+      <%= render 'form', recipe: @recipe %>
+      <%= link_to 'cancel', recipe_path %>
+  </div>
+</div>
+
