--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,4 +1,11 @@
-<h1>New Recipe</h1>
-
-<%= link_to 'back', recipes_path, class: "btn btn-primary"%>
-<%= render 'form', recipe: @recipe %>
+<div class="container">
+  <h1>New Recipe</h1>
+  <div class="row">
+    <div class="col">
+      <%= render 'form', recipe: @recipe %>
+  <div class="mt-3">
+    <%= link_to 'cancel', recipes_path, class: "btn btn-primary"%>
+  </div>
+    </div>
+  </div>
+</div>
