--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,30 +1,29 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <%= link_to "RecipeBook", root_path, class: "navbar-brand"%>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <%= link_to "RecipeBook", root_path, class: "navbar-brand"%>
-    <form class="form-inline">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-sm btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
-    </form>
-    <ul class="navbar-nav mr-auto d-flex justify-content-end">
+  <form class="form-inline">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-sm btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
+  </form>
+  <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarSupportedContent">
+    <div class="d-flex">
       <% if user_signed_in? %>
-        <li class="nav-item">
+        <div class="nav-item">
           <%= link_to 'Add Recipe', new_recipe_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
+        </div>
+        <div class="nav-item">
           <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link" %>
-        </li>
+        </div>
       <% else %>
-        <li class="nav-item">
+        <div class="nav-item">
           <%= link_to "Log In", new_user_session_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
+        </div>
+        <div class="nav-item">
            <%= link_to "Sing Up", new_user_registration_path, class: "nav-link" %>
-        </li>
+        </div>
       <% end %>
-    </ul>
+    </div>
   </div>
 </nav>
-
