--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,52 +1,48 @@
 <div class="container">
   <div class="col">
-    <div class="card">
+    <div class="card p-2 m-2">
       <div class="row">
         <div class="col">
          <% if @recipe.image.present? %>
             <%= image_tag @recipe.image.url(:medium, class: "recipe_image") %>
           <% else %>
-            <i class="far fa-sticky-note fa-5x"></i>
+            <i class="far fa-sticky-note"></i>
           <% end %>
         </div>
-        <div class="col">
-          <p>title:</p> <%= @recipe.title %>
-          <p>preparation time:</p><%= @recipe.time %>
-          <p>servers:</p> <%= @recipe.servers %>
-          <p>difficulty:</p> <%= @recipe.difficulty %>
-          <p>description:</p> <%= @recipe.description %>
+        <div class="col card-title">
+          <p class="card-recipe-title"><%= @recipe.title %></p>
+          <p>Preparation time: <%= @recipe.time %> min.</p>
+          <p>Servers: <%= @recipe.servers %> person</p>
+          <p>Difficulty: <%= @recipe.difficulty %></p>
+          <p>Description: <%= @recipe.description %></p>
         </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
+         <div class="col">
         <h3>Ingredients</h3>
         <ul>
-          <li>
-            <% @recipe.ingredients.each do |ingredient| %>
-            <p>ingredient:</p> <%= ingredient.name %>
-            <p>measure:</p> <%= ingredient.measure %>
-            <% end %>
-          </li>
+          <% @recipe.ingredients.each do |ingredient| %>
+            <li><p><%= ingredient.name %> - <%= ingredient.measure %> </p></li>
+          <% end %>
         </ul>
       </div>
+      </div>
+    <div class="row">
+
         <div class="col">
           <h3>Steps</h3>
           <ul>
-            <li>
-              <% @recipe.preparations.each do |preparation| %>
-              <p>Steps:</p> <%= preparation.step %>
-              <% end %>
-            </li>
+            <% @recipe.preparations.each do |preparation| %>
+              <li><p>Steps: <%= preparation.step %> </p></li>
+              <hr>
+            <% end %>
           </ul>
         </div>
     </div>
     <div class="d-flex justify-content-end">
-      <%= link_to 'edit', edit_recipe_path(@recipe), class: "btn btn-primary" %>
-      <%= link_to 'delete', recipe_path, class: "btn btn-primary",
+      <%= link_to 'edit', edit_recipe_path(@recipe), class: "btn btn-secondary" %>
+      <%= link_to 'delete', recipe_path, class: "btn btn-secondary",
       method: :delete,
           data: { confirm: "Are you sure?" } %>
-      <%= link_to 'back', recipes_path, class: "btn btn-primary" %>
+    </div>
     </div>
   </div>
 </div>
