--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -29,12 +29,12 @@
 
         <div class="col">
           <h3>Steps</h3>
-          <ul>
+          <ol>
             <% @recipe.preparations.each do |preparation| %>
-              <li><p>Steps: <%= preparation.step %> </p></li>
+              <li><p><%= preparation.step %> </p></li>
               <hr>
             <% end %>
-          </ul>
+          </ol>
         </div>
     </div>
     <div class="d-flex justify-content-end">
