--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,12 +3,8 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <form class="form-inline">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-sm btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
-  </form>
-  <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarSupportedContent">
-    <div class="d-flex">
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="d-flex d-flex justify-content-end">
       <% if user_signed_in? %>
         <div class="nav-item">
           <%= link_to 'Add Recipe', new_recipe_path, class: "nav-link" %>
@@ -26,4 +22,8 @@
       <% end %>
     </div>
   </div>
+  <form class="form-inline">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-sm btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
+  </form>
 </nav>
