--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,22 +1,22 @@
 <div class="container">
-  <div class="col">
+  <div class="col- col-sm col-md- col-lg- col-xl-">
     <div class="card p-2 m-2">
       <div class="row">
-        <div class="col">
+        <div class="col- col-sm col-md- col-lg- col-xl-">
          <% if @recipe.image.present? %>
             <%= image_tag @recipe.image.url(:medium, class: "recipe_image") %>
           <% else %>
             <i class="far fa-sticky-note"></i>
           <% end %>
         </div>
-        <div class="col card-title">
+        <div class="col- col-sm col-md- col-lg- col-xl- card-title">
           <p class="card-recipe-title"><%= @recipe.title %></p>
           <p>Preparation time: <%= @recipe.time %> min.</p>
           <p>Servers: <%= @recipe.servers %> person</p>
           <p>Difficulty: <%= @recipe.difficulty %></p>
           <p>Description: <%= @recipe.description %></p>
         </div>
-         <div class="col">
+         <div class="col- col-sm col-md- col-lg- col-xl-">
         <h3>Ingredients</h3>
         <ul>
           <% @recipe.ingredients.each do |ingredient| %>
@@ -27,7 +27,7 @@
       </div>
     <div class="row">
 
-        <div class="col">
+        <div class="col- col-sm col-md- col-lg- col-xl-">
           <h3>Steps</h3>
           <ol>
             <% @recipe.preparations.each do |preparation| %>
