--- a/app/assets/stylesheets/components/_content.scss
+++ b/app/assets/stylesheets/components/_content.scss
@@ -26,7 +26,7 @@ ul {
 
 // for image not posted
 .fa-sticky-note {
-  width: 300px;
+  width: 100%;
   height: 300px;
   background-color: WhiteSmoke;
 }
