--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,5 +1,5 @@
 .input_form {
-  width: 50%;
+  // width: 50%;
 }
 
 div input[type=text], select, textarea, #recipe_time, #recipe_servers, #recipe_description {
