--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,11 +1,19 @@
-<div class="col">
+<div class="container">
   <div class="input_form">
-  <%= simple_form_for @recipe do |f| %>
-    <%= f.input :title, placeholder: ".." %>
-    <%= f.input :description, placeholder: ".."%>
-    <%= f.input :servers, collection: 1..10, prompt: "Select a number" %>
-    <%= f.input :difficulty, collection: Recipe::DIFFICULTIES, prompt: "Select difficulty" %>
-    <%= f.input :time, collection: 1..200, prompt: "Select a number" %>
+    <%= simple_form_for @recipe do |f| %>
+    <div class="row">
+      <div class="col- col-sm col-md- col-lg- col-xl-">
+        <%= f.input :title, placeholder: "Name for your recipe" %>
+        <%= f.input :description, placeholder: "description for your recipe"%>
+      </div>
+      <div class="col">
+        <%= f.input :servers, collection: 1..10, prompt: "Select a number" %>
+        <div class="row m-0">
+          <%= f.input :difficulty, collection: Recipe::DIFFICULTIES, prompt: "Select difficulty" %>
+          <%= f.input :time, collection: 1..200, prompt: "Select a number" %>
+        </div>
+      </div>
+    </div>
     <%= f.input :image %>
   </div>
   <div class="row">
@@ -13,9 +21,9 @@
       <h3>ingredient</h3>
       <div id="ingredients">
         <%= f.fields_for :ingredients do |ingredient| %>
-        <%= render 'ingredient_fields', :f => ingredient %>
-      <% end %>
+          <%= render 'ingredient_fields', :f => ingredient %>
       </div>
+      <% end %>
       <div class="links">
         <%= link_to_add_association 'add ingredient', f, :ingredients, class: "btn btn-secondary" %>
       </div>
@@ -24,16 +32,16 @@
       <h3>preparation</h3>
       <div id="preparations">
         <%= f.fields_for :preparations do |preparation| %>
-        <%= render 'preparation_fields', :f => preparation %>
-      <% end %>
+          <%= render 'preparation_fields', :f => preparation %>
       </div>
+      <% end %>
       <div class="links">
         <%= link_to_add_association 'add preparation', f, :preparations, class: "btn btn-secondary" %>
       </div>
      </div>
-  </div>
-  <div class="mt-3">
-    <%= f.submit 'save', class: "btn btn-secondary" %>
-    <% end %>
+      <div class="col mt-3">
+        <%= f.submit 'save', class: "btn btn-secondary" %>
+        <% end %>
+      </div>
   </div>
 </div>
